--- a/Capitulo_1/index.html
+++ b/Capitulo_1/index.html
@@ -1,13 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pizza</title>
+    <title>Joe´s Pizza Co. - New York´s Best Pizza</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
+ <!--Page Conteiner-->
+<div id="container">
+    <header id="header">
+        <div id="logo">
+
+        </div>
+        <nav id="navigator">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about.html">Acerca de</a></li>
+                <li><a href="">Ayuda</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="main_content">
+
+        <article id="feature">
+            <img src="img/featureBg.png" alt="">
+        </article>
+        <article id="home_text">
+
+        </article>
+        <aside id="offers">
+
+        </aside>
+    </section>
+    <footer id="footer">
+
+    </footer>
+</div>
 
 </body>
 </html>
