Terminado detalles del header y de los menus falta corregir aun mas pero ahi va xd

--- a/Capitulo_1/index.html
+++ b/Capitulo_1/index.html
@@ -8,35 +8,39 @@
 </head>
 <body>
  <!--Page Conteiner-->
-<div id="container">
-    <header id="header">
-        <div id="logo">
+    <div id="container">
+        <header id="header">
+            <div id="logo">
+                <p>El Logo Va Aqui</p>
+            </div>
+            <div id="menu">
+                <nav id="navigator">
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="about.html">Acerca de</a></li>
+                        <li><a href="">Ayuda</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <section id="main_content">
 
-        </div>
-        <nav id="navigator">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="about.html">Acerca de</a></li>
-                <li><a href="">Ayuda</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section id="main_content">
+            <article id="feature">
+                <div id="Slide">
+                    <img src="img/featureBg.png" alt="">
+                </div>
+            </article>
+            <article id="home_text">
 
-        <article id="feature">
-            <img src="img/featureBg.png" alt="">
-        </article>
-        <article id="home_text">
+            </article>
+            <aside id="offers">
 
-        </article>
-        <aside id="offers">
-
-        </aside>
-    </section>
-    <footer id="footer">
-
-    </footer>
-</div>
+            </aside>
+        </section>
+        <footer id="footer">
+            <p>© 2019 "ISIChat Team" Todos los derechos reservados.</p>
+        </footer>
+    </div>
 
 </body>
 </html>
